--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,9 @@
     --main_text_color: #fff;
     --default_font_size: 18px;
     --navbar_font_size: 16px;
-    --default_font_family: 'Roboto', sans-serif;
+    --default_font_family: 'Roboto', 'Regular';
     --content_bg: #39784E;
+    --details_content_bg: #202020;
 }
 
 body {
@@ -25,11 +26,13 @@ p {
     height: 640px;
     background-color: var(--main_bg_color);
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
+    position: absolute;
     width: 3px; 
-    height: 2px; 
+    height: 0; 
 }
 ::-webkit-scrollbar-track {
     background: var(--main_bg_color);
@@ -135,12 +138,13 @@ p {
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 50px;
+    padding-right: 10px;
 }
 
 .app_bar img {
     width: 36px;
     height: 36px;
-    margin: 20px 0 0 10px;
+    margin: 20px 0 0 5px;
 }
 
 .app_bar p {
@@ -152,7 +156,7 @@ p {
 
 .main_content {
     display: grid;
-    place-content: center;
+    color: var(--main_text_color);
     height: 250px;
     margin: 20px 10px 0 10px;
 }
@@ -190,7 +194,113 @@ p {
     margin-right: 10px;
 }
 
-.interaction img {
+.interaction_img {
     width: 24px;
     height: 24px;
+}
+
+#details_bar {
+    margin: 0;
+}
+
+.details_content {
+    width: 360px;
+    height: 260px;
+}
+
+.details_interaction {
+    display: flex;
+    gap: 30px;
+    padding: 15px 20px;
+}
+
+.details_content .news_img {
+    width: 360px;
+    height: 260px;
+}
+
+#details_content_navigation {
+    width: 360px;
+    height: 57px;
+    justify-content: flex-end;
+    background-color: var(--details_content_bg);
+    opacity: 0.7;
+}
+
+.main_content p {
+    font-size: var(--navbar_font_size);
+    opacity: 0.7;
+    letter-spacing: 1px;  
+}
+
+#description_content {
+    margin: 24px 16px 0 16px;
+    height: auto;
+}
+
+.feedback_content {
+    color: var(--main_text_color);
+    margin: 15px 0 0 15px;
+}
+
+.feedback_content p{
+    margin-bottom: 10px;
+    font-size: var(--default_font_size);
+}
+
+.comment {
+    display: flex;
+    gap: 15px;
+    margin-right: 10px;
+}
+
+.comment img {
+    width: 40px;
+    height: 40px;
+}
+
+.comment p {
+    padding: 12px 14px 5px 14px;
+    background-color: #757575;
+    border-radius: 0 25px 25px 25px;
+    opacity: 0.7;
+}
+
+.order_content {
+    display: grid;
+    justify-items: center;
+    margin: 15px 0;
+}
+
+.date_content {
+    width: 320px;
+    margin: 0 20px;
+}
+
+.date_content p {
+    color: #6FB285;
+    margin-bottom: 15px;
+    font-size: 16px;
+}
+
+
+.date_content .title {
+    color: var(--main_text_color);
+    font-size: var(--default_font_size);
+}
+
+.date_content p img{
+    width: 24px;
+    height: 24px;
+    margin-right: 15px;
+}
+
+.btn {
+    width: 320px;
+    height: 42px;
+    text-transform: uppercase;
+    color: var(--main_text_color);
+    background-color: #6FB285;
+    border: none;
+    margin-top: 20px;
 }
