--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,6 @@ p {
     font-family: var(--default_font_family);
     font-size: 20px;
     font-weight: 500;
-    margin-bottom: 50px;
     padding-right: 10px;
 }
 
@@ -158,7 +157,7 @@ p {
     display: grid;
     color: var(--main_text_color);
     height: 250px;
-    margin: 20px 10px 0 10px;
+    margin: 20px 10px 15px 10px;
 }
 
 .news_img {
