--- a/css/main.css
+++ b/css/main.css
@@ -1,112 +1,134 @@
-.viev{
+.viev {
     width: 360px;
     height: 1600px;
     margin-left: 550px;
     border: 3px solid black;
     background-color: #282727;
 }
-.topnav{
+
+.topnav {
     width: 360px;
-height: 80px;
-background: #212121;
-display: flex;
+    height: 80px;
+    background: #212121;
+    display: flex;
 }
-.menu{
+
+.menu {
     width: 24px;
-height: 24px;
-color: #FFFFFF;
-font-size: 18px;
-margin-top: 40px;
-margin-left: 16px;
+    height: 24px;
+    color: #FFFFFF;
+    font-size: 18px;
+    margin-top: 40px;
+    margin-left: 16px;
 }
-.t1{
+
+.menuDet {
+    width: 24px;
+    height: 24px;
+    margin-top: 40px;
+    margin-left: 16px;
+    background-image: url('../img/Shape.png');
+    background-size: cover;
+    background-position: center;
+}
+
+.t1 {
     width: 145px;
-height: 24px;
-font-family: Roboto;
-font-size: 20px;
-font-weight: 500;
-line-height: 23.44px;
-text-align: left;
-margin-top: 40px;
-margin-left: 56px;
-color: #FFFFFF;
+    height: 24px;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 23.44px;
+    text-align: left;
+    margin-top: 40px;
+    margin-left: 56px;
+    color: #FFFFFF;
 }
-.news1{
+
+.news1 {
     background-image: url('../img/p1.png');
     background-size: cover;
     background-position: center;
     border: 3px solid #282727;
     width: 344px;
-height: 260px;
-margin-left: 6px;
-margin-top: 30px;
+    height: 260px;
+    margin-left: 6px;
+    margin-top: 30px;
 }
-.news2{
+
+.news2 {
     background-image: url('../img/p2.png');
     background-size: cover;
     background-position: center;
     border: 3px solid #282727;
     width: 344px;
-height: 260px;
-margin-left: 6px;
-margin-top: 30px;
+    height: 260px;
+    margin-left: 6px;
+    margin-top: 30px;
 }
-.news3{
+
+.news3 {
     background-image: url('../img/p3.png');
     background-size: cover;
     background-position: center;
     border: 3px solid #282727;
     width: 344px;
-height: 260px;
-margin-left: 6px;
-margin-top: 30px;
+    height: 260px;
+    margin-left: 6px;
+    margin-top: 30px;
 }
-.news4{
+
+.news4 {
     background-image: url('../img/p4.png');
     background-size: cover;
     background-position: center;
     border: 3px solid #282727;
     width: 344px;
-height: 260px;
-margin-left: 6px;
-margin-top: 30px;
+    height: 260px;
+    margin-left: 6px;
+    margin-top: 30px;
 }
-.news5{
+
+.news5 {
     background-image: url('../img/p5.png');
     background-size: cover;
     background-position: center;
     border: 3px solid #282727;
     width: 344px;
-height: 260px;
-margin-left: 6px;
-margin-top: 30px;
+    height: 260px;
+    margin-left: 6px;
+    margin-top: 30px;
 }
-.news1Content{
+
+.news1Content {
     width: 344px;
     height: 68px;
     margin-top: 192px;
     background: #39784E99;
     display: flex;
 }
-.news1ContentText{
-    color:#FFFFFF;
+
+.news1ContentText {
+    color: #FFFFFF;
     font-family: Roboto;
-font-size: 18px;
-font-weight: 400;
-line-height: 24px;
-text-align: left;
-width: 245px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    width: 245px;
 }
-.favorite{
+
+.favorite {
     background-image: url('../img/favorite.png');
     background-size: cover;
     background-position: center;
     width: 27px;
-height: 24px;
-margin-right: 30px;
-margin-top: 12px;
+    height: 24px;
+    margin-right: 30px;
+    margin-top: 12px;
 }
-.share{
+
+.share {
     width: 27px;
     height: 24px;
     background-image: url('../img/share.png');
@@ -115,32 +137,37 @@ margin-top: 12px;
     margin-right: 13px;
     margin-top: 12px;
 }
-.buttons{
+
+.buttons {
     display: flex;
     margin-top: 12px;
     margin-top: 0;
 }
-.phoneMenu{
+
+.phoneMenu {
     width: 360px;
-height: 48px;
-top: 1552px;
-display: flex;
+    height: 48px;
+    top: 1552px;
+    display: flex;
 }
-.back{
+
+.back {
     background-image: url('../img/back.png');
     background-repeat: no-repeat;
     background-position: center;
     width: 120px;
     height: 48;
 }
-.home{
+
+.home {
     background-image: url('../img/home.png');
     background-repeat: no-repeat;
     background-position: center;
     width: 120px;
     height: 48;
 }
-.recent{
+
+.recent {
     background-image: url('../img/recent.png');
     background-repeat: no-repeat;
     background-position: center;
@@ -148,3 +175,144 @@ display: flex;
     height: 48;
 }
 
+.t2 {
+    width: 185px;
+    height: 24px;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 23.44px;
+    text-align: left;
+    margin-top: 40px;
+    margin-left: 16px;
+    color: #FFFFFF;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.startDet {
+    background-image: url('../img/p1.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 360px;
+    height: 290px;
+    border: 1px solid #282727;
+}
+
+.DetContent {
+    width: 360px;
+    height: 48px;
+    background: #202020B2;
+    margin-top: 232px;
+}
+
+.buttonsDet {
+    display: flex;
+    margin-top: 12px;
+    margin-top: 0;
+    margin-left: 245px;
+}
+
+.detText {
+    width: 328px;
+    height: 194px;
+    color: #FFFFFFB2;
+    margin-left: 12px;
+}
+
+.vidguk {
+    width: 320px;
+    height: 24px;
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    color: #FFFFFF;
+    margin-left: 12px;
+}
+
+.firstResponse {
+    width: 360px;
+    height: 174px;
+    display: flex;
+    margin-top: 10px;
+}
+
+.ava1 {
+    background-image: url('../img/ava1.png');
+    background-size: cover;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+    margin-top: 20px;
+}
+
+.textRes1 {
+    width: 267px;
+    height: 126px;
+    background: #757575;
+    margin-left: 10px;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
+    padding: 10px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.secondResponse {
+    width: 360px;
+    height: 74px;
+    display: flex;
+    margin-top: 10px;
+}
+
+.ava2 {
+    background-image: url('../img/ava2.png');
+    background-size: cover;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+    margin-top: 20px;
+}
+
+.textRes2 {
+    width: 267px;
+    height: 46px;
+    background: #757575;
+    margin-left: 10px;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
+    padding: 10px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.downBar {
+    width: 360px;
+    height: 136px;
+}
+
+.downBarText {
+    width: 200px;
+    height: 24px;
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    background: #FFFFFF;
+}
+
+.date {
+    display: flex;
+}
