--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,14 @@
     background-color: #282727;
 }
 
+.vievDet {
+    width: 360px;
+    height: 1170px;
+    margin-left: 550px;
+    border: 3px solid black;
+    background-color: #282727;
+}
+
 .topnav {
     width: 360px;
     height: 80px;
@@ -300,6 +308,8 @@
 .downBar {
     width: 360px;
     height: 136px;
+    margin-top: 300px;
+    margin-left: 20px;
 }
 
 .downBarText {
@@ -310,9 +320,72 @@
     font-weight: 400;
     line-height: 24px;
     text-align: left;
-    background: #FFFFFF;
+    color: #FFFFFF;
 }
 
 .date {
     display: flex;
+    margin-top: 20px;
+}
+
+.someDich {
+    display: flex;
+    margin-top: 20px;
+}
+
+.downBarDet1 {
+    background-image: url('../img/downBarDet1.png');
+    background-size: cover;
+    background-position: center;
+    width: 16.2px;
+    height: 18px;
+}
+
+.downBarDet2 {
+    background-image: url('../img/downBarDet2.png');
+    background-size: cover;
+    background-position: center;
+    width: 22px;
+    height: 14px;
+}
+
+.textDownBar1 {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    width: 215px;
+    height: 24px;
+    color: #6FB285;
+    margin-left: 10px;
+}
+
+.textDownBar2 {
+    width: 215px;
+    height: 24px;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    color: #6FB285;
+    margin-left: 10px;
+}
+
+.buttonDown {
+    width: 320px;
+    height: 42px;
+    background: #39784E;
+    color: #FFFFFF;
+    margin-top: 40px;
+}
+
+.phoneMenuDet {
+    width: 360px;
+    height: 48px;
+    top: 1552px;
+    display: flex;
+    margin-top: 100px;
+    background-color: black;
 }
