--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,9 @@
     font-size: 18px;
     margin-top: 40px;
     margin-left: 16px;
+    background-image: url('../img/profBut.png');
+    background-size: cover;
+    background-position: center;
 }
 
 .menuDet {
@@ -36,7 +39,7 @@
     margin-top: 40px;
     margin-left: 16px;
     background-image: url('../img/Shape.png');
-    background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
 }
 
@@ -388,4 +391,163 @@
     display: flex;
     margin-top: 100px;
     background-color: black;
+}
+.phoneMenuSide {
+    width: 360px;
+    height: 48px;
+    top: 1552px;
+    display: flex;
+    background-color: black;
+}
+.sideNavbar{
+    width: 360px;
+    height: 592px;
+    background-color: #FFFFFF;
+    margin-left: 550px;
+}
+.flex{
+    display: flex;
+}
+.sideL{
+    width: 300px;
+height: 592px;
+border: 1px solid #282727;
+}
+.ground{
+    background-image: url('../img/ground.png');
+    background-size: cover;
+    background-position: center;
+    width: 300px;
+    height: 200px;
+    border: 1px solid #282727;
+}
+.sideCl{
+    background-color: #212121;
+    height: 592px;
+    width: 60px;
+    border: 1px solid #282727;
+}
+.avatar{
+    background-image: url('../img/avatar.png');
+    background-size: cover;
+    background-position: center;
+    width: 36.67px;
+height: 34.83px;
+margin-left: 28%;
+margin-top: 18px;
+position: absolute;
+}
+.oval{
+    border-radius: 40px;
+    background-color: #D9D9D9;
+    width: 80px;
+    height: 80px;
+    margin-left: 110px;
+    margin-top: 40px;
+    position: relative;
+}
+.username{
+    width: 264px;
+height: 24px;
+font-family: Roboto;
+font-size: 22px;
+font-weight: 400;
+line-height: 24px;
+text-align: center;
+margin-left: 17.5px;
+margin-top: 10px;
+color: #FFFFFF;
+
+}
+.list{
+    width: 164px;
+height: 313px;
+display: flex;
+margin-top: 30px;
+margin-left: 15px;
+}
+.l1{
+    background-image: url('../img/vector.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 26px;
+height: 26px;
+
+}
+.l2{
+    background-image: url('../img/purch.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 26px;
+height: 26px;
+margin-top: 20px;
+}
+.l3{
+    background-image: url('../img/mess.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 26px;
+height: 26px;
+margin-top: 20px;
+}
+.l4{
+    background-image: url('../img/fav.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 26px;
+height: 26px;
+margin-top: 20px;
+}
+.l5{
+    background-image: url('../img/frend.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 26px;
+height: 26px;
+margin-top: 20px;
+}
+.l6{
+    background-image: url('../img/letter.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 26px;
+height: 26px;
+margin-top: 20px;
+}
+.l7{
+    background-image: url('../img/spam.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 26px;
+height: 26px;
+margin-top: 20px;
+}
+.marg1{
+    font-family: Roboto;
+font-size: 18px;
+font-weight: 500;
+line-height: 24px;
+text-align: left;
+color: #000000DE;
+}
+.marg{
+    font-family: Roboto;
+font-size: 18px;
+font-weight: 500;
+line-height: 24px;
+text-align: left;
+color: #000000DE;
+margin-top: 22px;
+}
+.labels{
+    margin-left: 20px;
+}
+.exit{
+    width: 24px;
+height: 24px;
+background-image: url('../img/exit.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left: 15px;
+    margin-top: 20px;
 }
