--- a/css/detail_page.css
+++ b/css/detail_page.css
@@ -1,6 +1,6 @@
 .background_detail_page {
   width: 360px;
-  height: 1210px;
+  height: 1080px;
   background-color: #303030;
   margin-left: 550px;
 }
@@ -10,15 +10,43 @@
   background-color: #212121;
   display: flex;
 }
+.arrow {
+  width: 16px;
+  height: 16px;
+  margin-top: 40px;
+  margin-left: 20px;
+  background-image: url(../img/edition/news_back.png);
+}
+.tour {
+  width: 236px;
+  height: 24px;
+  margin-top: 40px;
+  margin-left: 40px;
+  font: Roboto;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 23.44px;
+  text-align: left;
+  color: #ffffff;
+}
+.three_points {
+  width: 12px;
+  height: 24px;
+  margin-left: 50px;
+  margin-top: 45px;
+  color: #ffffff;
+}
+
 .explotion {
   background-image: url(../img/news/explotion.png);
-  width: 359px;
+  width: 340px;
   height: 260px;
   border: 1px solid #303030;
   background-repeat: no-repeat;
+  margin-left: 8px;
 }
 .placeholder {
-  width: 359px;
+  width: 340px;
   height: 48px;
   background-color: #39784e99;
   margin-top: 212px;
@@ -67,6 +95,21 @@
   opacity: 0px;
   background-size: cover;
 }
+.lorem_ipsut {
+  width: 328px;
+  height: 194px;
+  top: 393px;
+  left: 16px;
+  gap: 0px;
+  opacity: 0px;
+  margin-left: 20px;
+  margin-top: 10px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
 .lorem_ipsut2 {
   width: 328px;
   height: 194px;
@@ -80,4 +123,182 @@
   line-height: 24px;
   text-align: left;
   color: #ffffffb2;
+}
+.res {
+  width: 320px;
+  height: 24px;
+  top: 625px;
+  margin-top: 10px;
+  margin-left: 20px;
+  left: 20px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #ffffff;
+}
+.man_photo {
+  width: 40px;
+  height: 40px;
+  top: 698px;
+  left: 16px;
+  margin-left: 18px;
+  margin-top: 10px;
+  gap: 0px;
+  opacity: 0px;
+  background-image: url(../img/edition/ovalman.png);
+}
+.man_mess {
+  width: 272px;
+  height: 156px;
+  background-image: url(../img/edition/message1.png);
+  background-repeat: no-repeat;
+  margin-left: 20px;
+  margin-top: 10px;
+  padding-left: 5px;
+  padding-top: 5px;
+}
+.man,
+.woman {
+  display: flex;
+}
+.text_mess1,
+.text_mess2 {
+  width: 226px;
+  height: 160px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 22px;
+  text-align: left;
+  color: #ffffffb2;
+}
+.woman_photo {
+  width: 40px;
+  height: 40px;
+  margin-left: 18px;
+  margin-top: 20px;
+  background-image: url(../img/edition/ovalwoman.png);
+}
+.woman_mess {
+  width: 272px;
+  height: 100px;
+  background-image: url(../img/edition/message2.png);
+  margin-left: 20px;
+  margin-top: 10px;
+  background-repeat: no-repeat;
+  padding-left: 5px;
+  padding-top: 5px;
+}
+.next_event {
+  width: 360px;
+  height: 136px;
+}
+.next {
+  width: 200px;
+  height: 24px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #ffffff;
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
+.date {
+  width: 148px;
+  height: 26px;
+  display: flex;
+}
+.cal {
+  width: 35px;
+  height: 24px;
+  background-image: url(../img/edition/calendar.png);
+  background-repeat: no-repeat;
+  margin-left: 15px;
+  margin-top: 5px;
+}
+.cal_text {
+  width: 102px;
+  height: 54px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #6fb285;
+  margin-top: 2px;
+  display: flex;
+}
+.may {
+  width: 115px;
+  height: 20px;
+}
+.social {
+  width: 228px;
+  height: 20px;
+  display: flex;
+}
+.soc {
+  width: 35px;
+  height: 24px;
+  background-image: url(../img/curtain/social.png);
+  background-repeat: no-repeat;
+  margin-left: 15px;
+  margin-top: 5px;
+}
+.soc_text {
+  width: 200px;
+  height: 34px;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #6fb285;
+  margin-top: 2px;
+  
+}
+.booking {
+  width: 320px;
+  height: 42px;
+  margin-left: 20px;
+  background: #39784e;
+  color: #ffffff;
+  border: 2px;
+}
+.navbar {
+  width: 360px;
+  height: 48px;
+  background-color: #000000;
+  margin-top: 30px;
+  display: flex;
+}
+.back {
+  background-repeat: no-repeat;
+  background-image: url(../img/news/back.png);
+  width: 130px;
+  height: 48px;
+  border: 2px;
+  background-position: center;
+}
+.home {
+  background-repeat: no-repeat;
+  background-image: url(../img/news/home.png);
+  width: 120px;
+  height: 48px;
+  border: 2px;
+  background-position: center;
+}
+.recent {
+  background-repeat: no-repeat;
+  background-image: url(../img/news/recent.png);
+  width: 120px;
+  height: 48px;
+  border: 2px;
+  background-position: center;
 }
