--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,38 @@
-body{
-    background-color: aquamarine;
+section{
+    color: #303030;
+}
+.main-info{
+    width:360px;
+    height: 1800px ;
+    background-color: #303030;
+    margin: 0 auto;
+}
+header{
+    width: 360px;
+    height: 80px;
+    margin: 0 auto;
+    background-color: #222222;
+    box-shadow: 10px  #222222;
+}
+h1{
+    color: white;
+}
+img{
+    width: 344px;
+    height: 260px;
+    top: 110px;
+    left: 8px;
+}
+.app-bar{
+    width: 360px;
+    height: 80px;
+    background-color: #212121;
+    margin: 0 auto;
+}
+.navbar{
+    width: 360px;
+    height: 48px;
+    top: 1552px;
+    background-color: #000000;
+    margin: 0 auto;
 }
