--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ p {
     font-family: var(--default_font_family);
 }
 
-.container {
+.iav_container {
     width: 360px;
     height: 640px;
     background-color: var(--main_bg_color);
@@ -50,7 +50,7 @@ p {
     background: #f1f1f1; 
 }
 
-.overlay {  
+.iav_overlay {  
     width: 0;
     height: 640px;
     position: absolute; 
@@ -60,11 +60,11 @@ p {
     transition: 0.5s;
 }  
 
-.information_side {
+.iav_information_side {
     display: grid;
 }
 
-.information_side::after {
+.iav_information_side::after {
     position: absolute;
     right: 0;
     width: 56px;
@@ -73,12 +73,12 @@ p {
     background-color: var(--main_bg_color);
 }
 
-.navbar_bg_img {
+.iav_navbar_bg_img {
     width: 304px;
     height: 200px;
 }
 
-.avatar-side {
+.iav_avatar_side {
     position: absolute;
     top: 50px;
     display: grid;
@@ -87,29 +87,29 @@ p {
     width: 304px;
 }
 
-.avatar-side p {
+.iav_avatar_side p {
     color: var(--main_text_color);
     text-align: center;
     margin-top: 18px;
     font-size: var(--default_font_size);
 }
 
-.navbar_avatar_img {
+.iav_navbar_avatar_img {
     width: 80px;
     height: 80px;
 }
 
-.content {
+.iav_content {
     margin: 40px 20px 22px 20px;
 }
 
-.content a img {
+.iav_content a img {
     width: 24px;
     height: 24px;
     margin-right: 30px;
 }
 
-.content a {
+.iav_content a {
     font-size: var(--navbar_font_size);
     font-weight: 600;
     margin-bottom: 30px;
@@ -118,16 +118,17 @@ p {
 }
 
 
-.overlay .closebtn {
+.iav_overlay .iav_closebtn {
     position: absolute;
     z-index: 10;
     top: 25px;
     right: 15px;
     width: 24px;
     height: 24px;
+    cursor: pointer;
 }
 
-.app_bar {
+.iav_app_bar {
     background-color: var(--app_bar_bg_color);
     height: 80px;
     display: flex;
@@ -140,32 +141,52 @@ p {
     padding-right: 10px;
 }
 
-.app_bar img {
+.iav_toggle_nav {
+    display: none;
+}
+
+#sideNav {
+    width: 0;
+    height: 640px;
+    position: absolute;
+    top: 153px;
+    z-index: 2;
+    background-color: #fff;
+    overflow-x: hidden;
+    transition: width 0.5s ease-in-out;
+}
+
+.iav_toggle_nav:checked ~ #sideNav {
+    width: 360px;
+}
+
+.iav_app_bar img {
     width: 36px;
     height: 36px;
     margin: 20px 0 0 5px;
+    cursor: pointer;
 }
 
-.app_bar p {
+.iav_app_bar p {
     margin: 20px 0 0 0;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
-.main_content {
+.iav_news_card {
     display: grid;
     color: var(--main_text_color);
     height: 250px;
     margin: 20px 10px 15px 10px;
 }
 
-.news_img {
+.iav_news_img {
     width: 340px;
     height: 260px;
 }
 
-.content_navigation {
+.iav_content_navigation {
     position: relative;
     display: flex;
     flex-wrap: nowrap;
@@ -178,7 +199,7 @@ p {
     padding: 10px 0 0 0;
 }
 
-.content_navigation a {
+.iav_content_navigation a {
     color: var(--main_text_color);
     font-size: var(--default_font_size);
     font-family: var(--default_font_family);
@@ -186,14 +207,14 @@ p {
     margin-left: 10px;
 }
 
-.interaction {
+.iav_interaction {
     display: flex;
     flex-wrap: nowrap;
     gap: 30px;
     margin-right: 10px;
 }
 
-.interaction_img {
+.iav_interaction_img {
     width: 24px;
     height: 24px;
 }
@@ -202,18 +223,18 @@ p {
     margin: 0;
 }
 
-.details_content {
+.iav_details_content {
     width: 360px;
     height: 260px;
 }
 
-.details_interaction {
+.iav_details_interaction {
     display: flex;
     gap: 30px;
     padding: 15px 20px;
 }
 
-.details_content .news_img {
+.iav_details_content .iav_news_img {
     width: 360px;
     height: 260px;
 }
@@ -226,7 +247,7 @@ p {
     opacity: 0.7;
 }
 
-.main_content p {
+.iav_news_card p {
     font-size: var(--navbar_font_size);
     opacity: 0.7;
     letter-spacing: 1px;  
@@ -237,64 +258,64 @@ p {
     height: auto;
 }
 
-.feedback_content {
+.iav_feedback_content {
     color: var(--main_text_color);
     margin: 15px 0 0 15px;
 }
 
-.feedback_content p{
+.iav_feedback_content p{
     margin-bottom: 10px;
     font-size: var(--default_font_size);
 }
 
-.comment {
+.iav_comment {
     display: flex;
     gap: 15px;
     margin-right: 10px;
 }
 
-.comment img {
+.iav_comment img {
     width: 40px;
     height: 40px;
 }
 
-.comment p {
+.iav_comment p {
     padding: 12px 14px 5px 14px;
     background-color: #757575;
     border-radius: 0 25px 25px 25px;
     opacity: 0.7;
 }
 
-.order_content {
+.iav_order_content {
     display: grid;
     justify-items: center;
     margin: 15px 0;
 }
 
-.date_content {
+.iav_date_content {
     width: 320px;
     margin: 0 20px;
 }
 
-.date_content p {
+.iav_date_content p {
     color: #6FB285;
     margin-bottom: 15px;
     font-size: 16px;
 }
 
 
-.date_content .title {
+.iav_date_content .iav_title {
     color: var(--main_text_color);
     font-size: var(--default_font_size);
 }
 
-.date_content p img{
+.iav_date_content p img{
     width: 24px;
     height: 24px;
     margin-right: 15px;
 }
 
-.btn {
+.iav_btn {
     width: 320px;
     height: 42px;
     text-transform: uppercase;
