--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,17 @@
+:root {
+  --general-background-color: #303030;
+  --text-color:#fff;
+  --navbar-color: #000000;
+}
 .background {
   width: 360px;
   height: 1600px;
-  background-color: #303030;
+  background-color: var(--general-background-color);
   margin-left: 550px;
+} 
+a {
+  text-decoration: none;
+  color: var(--text-color);
 }
 .app_bar_bg {
   width: 360px;
@@ -18,10 +27,13 @@
   border: 2px;
   background-position: center;
 }
+.dashes, .share, .like, .back, .home, .recent:hover{
+  cursor: pointer;
+}
 .popular_tour {
   width: 145px;
   height: 24px;
-  color: #fff;
+  color: var(--text-color);
   margin-top: 35px;
   font-family: Roboto;
   font-size: 20px;
@@ -29,22 +41,24 @@
   line-height: 23.44px;
   text-align: left;
 }
-.news1 {
-  background-image: url(../img/news/explotion.png);
+.news{
   width: 344px;
   height: 260px;
   margin-left: 8px;
-  margin-top: 30px;
-  border: 1px solid #303030;
+  border: 1px solid var(--general-background-color);
 }
-.placeholder1 {
+.news1 {
+  background-image: url(../img/news/explotion.png);
+  margin-top: 30px;
+}
+.placeholder {
   width: 344px;
   height: 68px;
   background-color: #39784e99;
   margin-top: 192px;
   display: flex;
 }
-.text1, .text2, .text3, .text4, .text5 {
+.text {
   width: 250px;
   height: 330px;
   top: 284px;
@@ -58,9 +72,9 @@
   font-weight: 400;
   line-height: 24px;
   text-align: left;
-  color: #fff;
+  color: var(--text-color);
 }
-.sharelike1, .sharelike2, .sharelike3, .sharelike4, .sharelike5 {
+.share_like {
   display: flex;
 }
 .like {
@@ -85,96 +99,43 @@
   gap: 0px;
   opacity: 0px;
   background-size: cover;
- 
 }
 .news2 {
   background-image: url(../img/news/water.png);
-  width: 344px;
-  height: 260px;
-  margin-left: 8px;
   margin-top: 20px;
-  border: 1px solid #303030;
-}
-.placeholder2 {
-  width: 344px;
-  height: 68px;
-  background-color: #39784e99;
-  margin-top: 192px;
-  display: flex;
 }
 .news3 {
   background-image: url(../img/news/gun.png);
-  width: 344px;
-  height: 260px;
-  margin-left: 8px;
   margin-top: 20px;
-  border: 1px solid #303030;
-}
-.placeholder3 {
-  width: 344px;
-  height: 68px;
-  background-color: #39784e99;
-  margin-top: 192px;
-  display: flex;
 }
 .news4 {
   background-image: url(../img/news/tractor.png);
-  width: 344px;
-  height: 260px;
-  margin-left: 8px;
   margin-top: 20px;
-  border: 1px solid #303030;
-}
-.placeholder4 {
-  width: 344px;
-  height: 68px;
-  background-color: #39784e99;
-  margin-top: 192px;
-  display: flex;
 }
 .news5 {
   background-image: url(../img/news/tank.png);
-  width: 344px;
-  height: 260px;
-  margin-left: 8px;
   margin-top: 20px;
-  border: 1px solid #303030;
-}
-.placeholder5 {
-  width: 344px;
-  height: 68px;
-  background-color: #39784e99;
-  margin-top: 192px;
-  display: flex;
 }
 .navbar {
   width: 360px;
   height: 48px;
-  background-color: #000000;
+  background-color: var(--navbar-color);
   margin-top: 70px;
   display: flex;
 }
-.back {
+.panel_of_manage {
   background-repeat: no-repeat;
-  background-image: url(../img/news/back.png);
-  width: 130px;
-  height: 48px;
-  border: 2px;
   background-position: center;
+  border: 2px;
+  height: 48px;
+  width: 120px;
+}
+.back {
+  background-image: url(../img/news/back.png);
 }
 .home {
-  background-repeat: no-repeat;
   background-image: url(../img/news/home.png);
-  width: 120px;
-  height: 48px;
-  border: 2px;
-  background-position: center;
 }
 .recent {
-  background-repeat: no-repeat;
   background-image: url(../img/news/recent.png);
-  width: 120px;
-  height: 48px;
-  border: 2px;
-  background-position: center;
 }
