--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,9 @@
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 0; /* Place content 60px from the top */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  overflow: hidden;
 }
+
 
 .sidenav a {
   font-family: Roboto;
@@ -22,15 +24,17 @@
   color: #000000de;
   display: block;
   transition: 0.3s;
+;
 }
 
 .sidenav a:hover {
   color: #f1f1f1;
   background-color: #575757;
+
 }
 
 .sidenav .closebtn {
-  position: relative ;
+  position: relative;
   top: 0px;
   font-size: 36px;
   margin: 0px;
@@ -38,6 +42,7 @@
   color: #ffffff; 
   background-color: #333333;
   padding-left: 280px;
+
 }
 #main {
   transition: margin-left 0.5s;
@@ -179,9 +184,9 @@ body {
 position: absolute;
 display: flex;
 padding-top: 140px;
-padding-left: 70px;
+padding-left: 40px;
 color: rgb(255, 255, 255);
-font-size: 23px;
+font-size: 20px;
 z-index: 2;
 }
 .image-bottom {
@@ -201,7 +206,34 @@ z-index: 2;
   height: 80px;
   z-index: 1;
 }
+.menu-item {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 10px;
+}
 
+.menu-item a {
+  text-decoration: none;
+  color: black;
+  margin-left: 10px;
+}
+
+.icon {
+  width: 16px; 
+  height: 16px;
+  margin-left: 20px;
+}
+.footer {
+margin-top: 20px;
+background-color: #212121;
+padding: 10px;
+ width: 360px;
+ height: 48px;
+ top: 592px;
+ gap: 0px;
+ opacity: 0px;
+}
 body,
 html {
   margin: 0 auto;
