--- a/css/main.css
+++ b/css/main.css
@@ -251,6 +251,10 @@ html {
   background: #39784e;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
   border-radius: 2px;
+  border-radius: 2px;
+  gap: 0px;
+  color: #ffffff;
+  font-size: 20px;
 }
 
 .event {
@@ -271,8 +275,9 @@ html {
 .review {
   display: flex;
   align-items: center;
-  justify-content: left;
-  gap: 20px;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20px; 
 }
 
 .review p {
@@ -284,6 +289,10 @@ html {
   box-sizing: border-box;
   background: #757575;
   display: inline-block;
+  display: inline-block;
+  border-radius: 0px 50px 40px 50px;
+  padding: 10px;
+  color: #ffffff;
 }
 
 .modal-content h2 {
@@ -315,6 +324,13 @@ html {
   justify-content: center;
   gap: 10px;
 }
+.event {
+  display: flex;
+  align-items: center;
+  gap: 15px; 
+  padding: 10px; 
+  margin-bottom: 15px;
+}
 .modal-content h3 {
   left: 16px;
   top: 393px;
@@ -325,6 +341,7 @@ html {
   line-height: 24px;
   color: rgba(255, 255, 255, 0.7);
 }
+
 
 @media only screen and (max-width: 360px) {
   body {
