--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,8 @@ img{
     height: 80px;
     background-color: #212121;
     margin: 0 auto;
+    display: flex;
+
 }
 .navbar{
     width: 360px;
@@ -44,11 +46,6 @@ img{
   padding-top: 12px;
   z-index: -1;
 }
-
-/*.div-nav{*/
-/*  display: flex;*/
-/*  justify-content: center;*/
-/*}*/
 
 .content{
   background: rgba( 0, 255, 0, 0.2);
